--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,7 +37,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 23px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
@@ -50,6 +50,9 @@ section#redes-sociais img:hover {
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.459);
     transition: transform .5s, border 1s;
+}
+section#redes-sociais p {
+    color: white;
 }
 
 section#redes-sociais img {
